# yahoostock

./: LICENSE  LICENSE - Copy  pyproject.toml  readme - Copy.md  readme.md  setup - Copy.cfg  setup.cfg  setup.py
src/stockscrape/: yahoo.py
src/stockscrape_rohan0x.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/yahoostock/: extra.py  yahoo.py
src/yahoostock.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
