[metadata]
name = stock-scrape-rohan0x
version = 0.0.1
author = Rohan Singh
author_email = rohansingh07294@gmail.com
description = A package designed to scrape data from various business websites such as Yahoo Finance and CNN Business.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rohan0x/stock-scrape
project_urls =
    Bug Tracker = https://github.com/rohan0x/stock-scrape/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src