[metadata]
name = yahoostock
version = 0.0.1
author = rohan0x
author_email = rohansingh07294@gmail.com
description = A package designed to scrape data from various business websites such as Yahoo Finance and CNN Business.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rohan0x/stockscrape
project_urls =
    Bug Tracker = https://github.com/rohan0x/stockscrape/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src